syntax = "proto3";

option csharp_namespace = "GrpcsAgent";

package GrpcsAgent;

service Publisher {
  rpc PublishMessage (PublishRequest) returns (PublishReply);
}

message PublishRequest {
  string topic = 1;
  string message = 2;
}

message PublishReply {
  bool isSuccess = 1;
}
